# ot-harjoitustyo

./: .gitignore  README.md  changelog.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kielimalliselvitys.md  tyoaikakirjanpito.md  vaatimusmäärittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
src/: chess_core.py  database_connection.py  index.py  initialize_database.py
src/entities/: user.py
src/repositories/: user_repository.py
src/services/: chess_core.py  game_service.py  user_service.py
src/tests/: chess_core_test.py  user_test.py
src/ui/: game_page.py  menu_page.py  rating_page.py  ui.py
